 7. Improve album style queue with grouping - thanks to Darrell.
 8. Allow per-player colour setting.
 9. Add support for LMS9's portraitid attribute - thanks to Michael Herger.
10. If no playlist image found, use first valid image found in playlist tracks.
11. Add (server side) option to enable playlist images.
12. When prompting for discs to add to queue use '0' for 'All discs'.

5.8.3
-----
1. Don't react to slider, etc., changes in group volume dialog for fixed volume
   players when Material is set to 'Hide volume control'.
2. Fix closing of transfer queue and sort list dialogs when clicking on select
   option.

5.8.2
-----
 1. Translation updates.
 2. Add context-menu to player name in main toolbar.
 3. Use 150px (or 300px HiDPI) for list images.
 4. Reduce CPU load by removing some CSS animations - don't pulse library
    refresh status, don't pulse playing but muted volume, and use outlined pause
    icon to indicate waiting to play.
 5. Fix custom actions for playlists.
 6. Add PLAYLISTID and PLAYLISTNAME to custom action variables.
 7. Remove fix for mapping of mysqueezebox.com icons, as no longer required and
    breaks some favourites images.
 8. Add support for volume control of individual players with volume fixed at
    100% via new status query attribute - thanks to Sam Y
 9. In group volume dialog, fix player name for fixed volume players.
10. Ignore clicks on disabled queue context menu items.
11. Store player volumes when creating a group player.
12. Fix drag'n'drop in grid view not showing drag thumbnail.
13. Allow genre images to be PNG files.
14. Add (initial) support for playlist images - need to manually add
    "playlistImages: '1'" to 'prefs/plugin/material-skin.prefs'. Images need to
    be in 'prefs/material-skin/playlists/' - and have same name requirements
    as per genre images.
15. Use user genre, and playlist, images when listing favourites (if relevant
    option is enabled).